Fix missing lines after page change, adjust layout for scrollbar

--- a/src/components/daysViewTable/daysViewOneDay/calendarBodyHours/CalendarBodyHours.scss
+++ b/src/components/daysViewTable/daysViewOneDay/calendarBodyHours/CalendarBodyHours.scss
@@ -45,7 +45,7 @@
   position: absolute;
   left: 40px;
   width: 100vw !important;
-  height: 0.5px;
+  height: 1px;
   //margin-top: 9px;
   background: $GRAY_300;
   z-index: 2;
